--- a/src/main/resources/static/app/components/coinInfo/coinInfo.html
+++ b/src/main/resources/static/app/components/coinInfo/coinInfo.html
@@ -11,14 +11,7 @@
 					<hr>
 					<div class="col-12" style="margin-top: 2em; margin-bottom: 1em;">
 						<h5>
-							<span><strong>Pay Period:&nbsp;</strong></span> 
-							<span class="dropdown">
-								<button class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false" type="button">05/15/2018</button> 
-								<span class="dropdown-menu" role="menu">
-									<a class="dropdown-item" role="presentation" href="#">First
-										Item</a><a class="dropdown-item" role="presentation" href="#">Second
-										Item</a><a class="dropdown-item" role="presentation" href="#">Third
-										Item</a></span> </span>
+							{{$ctrl.result.MarketCurrency}}
 						</h5>
 					</div>
 				</div>
