--- a/src/main/resources/static/app/components/reportView/reportView.html
+++ b/src/main/resources/static/app/components/reportView/reportView.html
@@ -2,7 +2,7 @@
         <section class="clean-block clean-cart dark">
             <div class="container" style="max-width:1500px; margin-top: 10em">
                 <div class="block-heading">
-					<coin-info></coin-info>
+					<coin-info coin="$ctrl.coin"></coin-info>
                 </div>
              </div>
         </section>
