--- a/src/main/resources/static/app/components/coinInfo/coinInfo.html
+++ b/src/main/resources/static/app/components/coinInfo/coinInfo.html
@@ -11,7 +11,7 @@
 					<hr>
 					<div class="col-12" style="margin-top: 2em; margin-bottom: 1em;">
 						<h5>
-							{{$ctrl.result.MarketCurrency}}
+							{{$ctrl.coin.results.MarketCurrency}}
 						</h5>
 					</div>
 				</div>
